--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,17 +35,21 @@
           android:text="test3"
           />
   </LinearLayout>
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
-       <androidx.viewpager.widget.PagerTabStrip
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-             />
+       >
+
+        <androidx.viewpager.widget.PagerTabStrip
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </androidx.viewpager.widget.ViewPager>
+</RelativeLayout>
+
 
 
 </LinearLayout>
