--- a/app/src/main/res/layout/fragment_p1.xml
+++ b/app/src/main/res/layout/fragment_p1.xml
@@ -1,17 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".P1">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:textSize="40dp"
-        android:text="Page 1"
-        />
-
-</FrameLayout>
+<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    tools:context=".P1">    <!-- TODO: Update blank fragment layout -->    <TextView        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:textSize="40dp"        android:text="Page 1"        />    <ViewFlipper        android:id="@+id/viewFlipper"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginHorizontal="20dp"        android:inAnimation="@anim/updown_show"        android:outAnimation="@anim/updown_hide"        >        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical"            >            <ImageView                android:layout_width="wrap_content"                android:layout_height="400dp"                android:src="@drawable/n1"                />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:gravity="center"                android:text="1"                />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical">            <ImageView                android:layout_width="wrap_content"                android:layout_height="400dp"                android:src="@drawable/n2"                />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:gravity="center"                android:text="2"                />        </LinearLayout>        <LinearLayout            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:orientation="vertical">            <ImageView                android:layout_width="wrap_content"                android:layout_height="400dp"                android:src="@drawable/n3"                />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:gravity="center"                android:text="3"                />        </LinearLayout>    </ViewFlipper></LinearLayout>
